adding a endpoint for downloading wordlist

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -64,7 +64,7 @@
     const input = document.getElementById('path-input');
     const suggestionsBox = document.getElementById('suggestions');
 
-    const url = "http://localhost:8000/api/get_dirs";
+    const url = "/api/get_dirs";
     let paths = [];
 
     fetch(url)
