make /api/download asseccable to everyuser

--- a/templates/view_dir.html
+++ b/templates/view_dir.html
@@ -100,7 +100,7 @@
                 {% endfor %}
             {% endif %}
         </div>
-
+        <a href="{% url 'download' %}" style="margin-top: 0px;">Download WordList as .zip</a>
     </div>
 
 
